[package]
authors = ["Freddy Wordingham <fjmw201@exeter.ac.uk>"]
name = "cartographer"
version = "0.1.0"
description = "Antler rendering engine."
repository = "https://github.com/FreddyWordingham/antler"
readme = "README.md"
keywords = ["rt"]
categories = ["science", "simulation"]
edition = "2018"
license = "MIT OR Apache-2.0"
documentation = "https://freddywordingham.github.io/antler"
exclude = ["docs/", "input/"]

[dependencies]
# arctk = { path = "../arctk", features = ["netcdf", "terminal_size"] }
# arctk-attr = { path = "../arctk-attr" }
# arctk-proc = { path = "../arctk-proc" }
arctk = { version = "0.11.1", features = ["netcdf", "terminal_size"] }
arctk-attr = "0.2.*"
arctk-proc = "0.2.*"
ndarray = { version = "0.13.*", features = ["rayon"] }
num_cpus = "1.13.*"
rand = "0.7.*"
rayon = "1.5.*"
serde = { version = "1.0.*", features = ["derive"] }
minifb = { version = "0.19.*", optional = true }

[profile.dev]
# Development profile: "cargo build".
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true

[profile.release]
# Release profile: "cargo build --release"
# # [DEV RELEASE]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = "unwind"
incremental = false
overflow-checks = true

# [profile.release]
# # [RELEASE]
# # Release profile: "cargo build --release"
# opt-level = 3
# debug = false
# rpath = false
# lto = "fat"
# debug-assertions = false
# codegen-units = 1
# panic = "abort"
# incremental = false
# overflow-checks = false

[profile.test]
# Testing profile: "cargo test"
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
incremental = true
overflow-checks = true

[profile.bench]
# Benchmark profile: "cargo bench" (and "cargo test --release)".
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false

[package.metadata.docs.rs]
no-default-features = true
default-target = "x86_64-apple-darwin"
targets = ["x86_64-unknown-linux-gnu"]
